Add forgot password links.

--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -47,7 +47,12 @@
       </div>
 
       <div class="ads-form-section">
-        <a href="{{ path('fos_user_registration_register') }}">Register new account</a>
+        <div>
+          <a href="{{ path('fos_user_registration_register') }}">Register new account</a>
+        <div>
+        <div>
+          <a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a>
+        </div>
       </div>
     </form>
   </div>
