--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -127,6 +127,7 @@
                       </li>
                       <li>
                         <a href="{{ path('fos_user_registration_register') }}">Register new account</a>
+                        <a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a>
                       </li>
                     </ul>
                   </li>
