--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -210,8 +210,22 @@ ul.nav-expand {
   max-height: 10em;
 
   li {
-    width: 250px;
+    width: 230px;
     float: left;
+    margin-right: 20px;
+    margin-bottom: 5px;
+  }
+
+  li.hot-category a {
+      text-decoration: none;
+      font-weight: bold;
+      background-color: @gray-lighter;
+      color: @brand-primary;
+      .box-shadow(inset 0 0 3px 0 fade(#000, 10%));
+      border-radius: @border-radius-base;
+      &:hover {
+        background-color: darken(@gray-lighter, 10%);
+      }
   }
 
   a {
