Add as_link varible to user_mini.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -76,8 +76,13 @@ body {
   .inline-block a {
     padding: 5px;
   }
-  .ad-user {
+  a.ad-user {
+    margin-top: 5px;
+    display: block;
     padding: 5px;
+    &:hover {
+      background-color: @gray-lighter;
+    }
   }
   p {
     margin: 0;
