--- a/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
@@ -7,7 +7,11 @@
   </div>
   <div class="user-desc">
       <div class="user-realname">
-        <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.username }}</a>
+        {% if as_link is defined and as_link == false %}
+          <span>{{ user.username }}</span>
+        {% else %}
+          <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.username }}</a>
+        {% endif %}
       </div>
       <div class="user-label">{{ text }}</div>
   </div>
