Add disconnect social account functionality.

--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -89,14 +89,18 @@
           {% if user.facebookId %}
             Connected to {{ user.facebookRealName }}
           {% else %}
-            <p>Not Connected</p>
+            Not Connected
           {% endif %}
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label">Connect with Facebook</label>
+        <label class="control-label">&nbsp;</label>
         <div class="form-widget">
-          <a href="{{ path('hwi_oauth_service_redirect', {service: 'facebook'}) }}" class="btn btn-facebook">Connect with Facebook</a>
+          {% if user.facebookId %}
+            <a href="{{ path('adstacy_app_user_disconnect', {service: 'facebook'}) }}" class="btn btn-facebook">Disconnect Facebook Account</a>
+          {% else %}
+            <a href="{{ path('hwi_oauth_service_redirect', {service: 'facebook'}) }}" class="btn btn-facebook">Connect with Facebook</a>
+          {% endif %}
         </div>
       </div>
     </div>
@@ -109,16 +113,20 @@
         <label class="control-label">Status</label>
         <div class="form-widget">
           {% if user.twitterId %}
-            <p>Connected to {{ user.twitterRealName }}</p>
+            Connected to {{ user.twitterRealName }}
           {% else %}
-            <p>Not Connected</p>
+            Not Connected
           {% endif %}
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label">Connect with Facebook</label>
+        <label class="control-label">&nbsp;</label>
         <div class="form-widget">
-          <a href="{{ path('hwi_oauth_service_redirect', {service: 'twitter'}) }}" class="btn btn-twitter">Connect with Twitter</a>
+          {% if user.twitterId %}
+            <a href="{{ path('adstacy_app_user_disconnect', {service: 'twitter'}) }}" class="btn btn-twitter">Disconnect Twitter Account</a>
+          {% else %}
+            <a href="{{ path('hwi_oauth_service_redirect', {service: 'twitter'}) }}" class="btn btn-twitter">Connect with Twitter</a>
+          {% endif %}
         </div>
       </div>
     </div>
