Add contact form.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -152,6 +152,7 @@
               <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">about</a></li>
               <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">terms</a></li>
               <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">privacy policy</a></li>
+              <li><a href="{{ path('adstacy_app_contact') }}">contact</a></li>
             </ul>
           </div>
         </nav>
