--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -33,23 +33,7 @@ body {
   .share-container {
     padding: 0 10px 5px 10px;
   }
-  .btn-promote {
-    border-left: 0;
-    border-right: 0;
-    font-size: 11px;
-    font-weight: bold;
-    padding: 5px;
-    width: 90px;
-  }
-  .btn-share {
-    font-size: 11px;
-    font-weight: bold;
-    padding: 5px;
 
-    /*.twitter-share {*/
-      /*color: #1c95d0;*/
-    /*}*/
-  }
   .social-list {
     a {
       color: #888;
@@ -58,14 +42,11 @@ body {
       padding: 3px 10px;
     }
   }
-  .btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
+  .btn-group > .btn-promote:not(:first-child):not(:last-child) {
+    .border-left-radius(@border-radius-small);
   }
   .promotes-count {
-    font-size: 11px;
     font-weight: bold;
-    padding: 5px 10px;
   }
   .box-medium {
     width: 150px;
@@ -80,6 +61,8 @@ body {
     margin-top: 5px;
     display: block;
     padding: 5px;
+    border-top: 1px solid @border-color;
+    border-radius: 0 0 @border-radius-base @border-radius-base;
     &:hover {
       background-color: @gray-lighter;
     }
@@ -87,6 +70,13 @@ body {
   p {
     margin: 0;
     font-size: 13px;
+  }
+  .btn-group > .btn-promote {
+    margin-left: 0;
+    margin-right: 1px;
+  }
+  .btn-promote {
+    width: 110px;
   }
 }
 
@@ -266,10 +256,6 @@ ul.nav-expand {
   &.small img {
     max-height: 200px;
   }
-}
-
-.border-top {
-  border-top: 1px solid @border-color;
 }
 
 #create-ads {
