--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -36,7 +36,7 @@
           <button type="button" class="btn btn-default promotes-count">{{ ad.promoteesCount }}</button>
         </div>
       {% else %}
-        <button class="btn btn-default">{{ ad.promoteesCount }} promotes</button>
+        <button class="btn btn-default btn-sm">{{ ad.promoteesCount }} promotes</button>
       {% endif %}
       <div class="btn-group btn-group-sm">
         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
