Fix resize bug because of adstacy-container.

--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -1,8 +1,10 @@
 {% extends is_ajax() ? '::ajax.html.twig' : 'AdstacyAppBundle:User:show.html.twig' %}
 
 {% block show_content %}
-  <div class="jscroll">
-    {{ block('ajax_content') }}
+  <div class="adstacy-container">
+    <div class="jscroll">
+      {{ block('ajax_content') }}
+    </div>
   </div>
 {% endblock %}
 
