add message for empty item.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -30,7 +30,7 @@
 // @import "@{path}/pager.less";
 @import "@{path}/labels.less";
 @import "@{path}/badges.less";
-// @import "@{path}/jumbotron.less";
+@import "@{path}/jumbotron.less";
 // @import "@{path}/thumbnails.less";
 @import "@{path}/alerts.less";
 // @import "@{path}/progress-bars.less";
