--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -5,3 +5,5 @@
 @input-border-focus: #bbb;
 @navbar-default-brand-color: @brand-primary;
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
+@jumbotron-color: #fff;
+@jumbotron-bg: transparent;
