fix follow btn.

--- a/src/Adstacy/UserBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/settings.less
@@ -144,7 +144,7 @@
       width: 120px;
     }
   }
-  
+
   .score-block {
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -159,6 +159,10 @@
       font-size: 24px;
       font-weight: bold;
     }
+  }
+
+  .btn-block + .btn-block {
+    margin-top: 0;
   }
 }
 
@@ -191,5 +195,8 @@
       border-top: 1px solid #dfdfdf;
       padding-top: 10px;
     }
+  }
+  .btn-follow {
+    width: 100px;
   }
 }
