--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -13,8 +13,8 @@
         <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a>
         {% if app.user and app.user != user %}
           {% set followed = app.user.hasFollowUser(user) %}
-          <a class="btn btn-primary unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a>
-          <a class="btn btn-primary follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+          <a class="btn btn-primary btn-follow unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a>
+          <a class="btn btn-primary btn-follow follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
         {% endif %}
       </h1>
       <h2 class="user-about">{{ user.about }}</h2>
